# cicd-app

./: .gitignore
.github/workflows/: backend-ci-cars.yml  frontend-ci.yml
backend/cars-app/: .env.example  Dockerfile  pyproject.toml
backend/cars-app/src/app/: main.py
backend/cars-app/src/app/cars/: router.py  service.py
backend/cars-app/tests/: test_health.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
