[project]
name = "cars-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.0",
    "httpx2>=2.4.0",
    "motor>=3.7.1",
    "polars>=1.42.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.17.0",
    "ruff>=0.15.19",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

